update plumcheck images icons positions

--- a/src/constants/clientsStack.astro
+++ b/src/constants/clientsStack.astro
@@ -125,6 +125,7 @@ import mbsPageImage from '~/assets/images/clients/mbs-page.png';
 import meePage2xImage from '~/assets/images/clients/mee-page-2x.png';
 import meePageImage from '~/assets/images/clients/mee-page.png';
 import pakiraPageImage from '~/assets/images/clients/pakira-page.png';
+import plumcheckPagex2Image from '~/assets/images/clients/plumcheck-page-2x.png';
 import plumcheckPageImage from '~/assets/images/clients/plumcheck-page.png';
 import privoPage2xImage from '~/assets/images/clients/privo-page-2x.png';
 import privoPageImage from '~/assets/images/clients/privo-page.png';
@@ -291,7 +292,7 @@ export const ClientsShort: ClientPageProps[] = [
     classes: 'bg-[#1E3A8A]',
   },
   {
-    pageTopImg: { default: plumcheckPageImage },
+    pageTopImg: { default: plumcheckPageImage, x2: plumcheckPagex2Image },
     desktopImg: { default: plumcheckLaptopImage, x2: plumcheckLaptop2xImage },
     logoImg: plumcheckLogoImage,
     mobileImg: { default: plumcheckMobileImage, x2: plumcheckMobile2xImage },
