changed mee images and wordings

--- a/src/constants/clientsStack.astro
+++ b/src/constants/clientsStack.astro
@@ -42,10 +42,10 @@ import eversanaLaptop2xImage from '~/assets/images/devices/eversana-2x.png';
 import eversanaLaptopImage from '~/assets/images/devices/eversana.png';
 import mbsLaptop2xImage from '~/assets/images/devices/mbs-2x.png';
 import mbsLaptopImage from '~/assets/images/devices/mbs.png';
-import meeLaptop2xImage from '~/assets/images/devices/mee-2x.png';
+import meeLaptop2xImage from '~/assets/images/devices/mee-desktop-2x.png';
+import meeLaptopImage from '~/assets/images/devices/mee-desktop.png';
 import meeMobile2xImage from '~/assets/images/devices/mee-mobile-2x.png';
 import meeMobileImage from '~/assets/images/devices/mee-mobile.png';
-import meeLaptopImage from '~/assets/images/devices/mee.png';
 import pakiraLaptop2xImage from '~/assets/images/devices/pakira-desktop-2x.png';
 import pakiraLaptopImage from '~/assets/images/devices/pakira-desktop.png';
 import pakiraMobile2xImage from '~/assets/images/devices/pakira-mobile-2x.png';
@@ -92,10 +92,9 @@ import OrrPhotoImage from '~/assets/images/photos/Orr_QuantHealth.jpg';
 import mbsScreenshot1Image from '~/assets/images/screenshots/MBSM screenshot - 1.png';
 import mbsScreenshot2Image from '~/assets/images/screenshots/MBSM screenshot - 2.png';
 import mbsScreenshot3Image from '~/assets/images/screenshots/MBSM screenshot - 3.png';
-import meeScreenshot1Image from '~/assets/images/screenshots/Mee screenshot - 1.png';
-import meeScreenshot2Image from '~/assets/images/screenshots/Mee screenshot - 2.png';
-import meeScreenshot3Image from '~/assets/images/screenshots/Mee screenshot - 3.png';
-import meeScreenshot4Image from '~/assets/images/screenshots/Mee screenshot - 4.png';
+import meeScreenshot1Image from '~/assets/images/screenshots/Mee screenshot - 1.jpg';
+import meeScreenshot2Image from '~/assets/images/screenshots/Mee screenshot - 2.jpg';
+import meeScreenshot3Image from '~/assets/images/screenshots/Mee screenshot - 3.jpg';
 import plumCheckScreenshot1Image from '~/assets/images/screenshots/PlumCheck-screenshot-1.png';
 import plumCheckScreenshot2Image from '~/assets/images/screenshots/PlumCheck-screenshot-2.png';
 import plumCheckScreenshot3Image from '~/assets/images/screenshots/PlumCheck-screenshot-3.png';
@@ -393,12 +392,12 @@ export const ClientsAll: ClientPageProps[] = [
     description: 'A human-centered approach to personal data',
     name: 'Mee',
     pageTopImg: { default: meePageImage, x2: meePage2xImage },
-    title: 'Mee is about putting you in control of your data relationships with other people and companies.',
+    title: 'We build solutions that put you at the center of personal data flows.',
     subtitle: 'Giving individuals more control. More privacy. More convenience.',
     screenshotsInfo: {
       subtitle:
         'Swift is a supporter of the Mee Foundation. We contribute to the Foundation’s open source projects on Github.',
-      images: [meeScreenshot1Image, meeScreenshot2Image, meeScreenshot3Image, meeScreenshot4Image],
+      images: [meeScreenshot1Image, meeScreenshot2Image, meeScreenshot3Image],
     },
     links: ['mee.foundation', 'itsmee.org'],
     id: 'meefoundation',
