update plumcheck screenshots

--- a/src/constants/clientsStack.astro
+++ b/src/constants/clientsStack.astro
@@ -99,6 +99,7 @@ import meeScreenshot3Image from '~/assets/images/screenshots/Mee screenshot - 3.
 import plumCheckScreenshot1Image from '~/assets/images/screenshots/PlumCheck-screenshot-1.png';
 import plumCheckScreenshot2Image from '~/assets/images/screenshots/PlumCheck-screenshot-2.png';
 import plumCheckScreenshot3Image from '~/assets/images/screenshots/PlumCheck-screenshot-3.png';
+import plumCheckScreenshot4Image from '~/assets/images/screenshots/PlumCheck-screenshot-4.png';
 import privoScreenshot1Image from '~/assets/images/screenshots/PRIVO screenshot - 1.png';
 import privoScreenshot2Image from '~/assets/images/screenshots/PRIVO screenshot - 2.png';
 import privoScreenshot3Image from '~/assets/images/screenshots/PRIVO screenshot - 3.png';
@@ -309,7 +310,12 @@ export const ClientsShort: ClientPageProps[] = [
     screenshotsInfo: {
       subtitle:
         'We developed a web application that allows users to verify their identity, and connect their healthcare provider accounts to share verified health information. We continue to maintain and enhance the solution.',
-      images: [plumCheckScreenshot1Image, plumCheckScreenshot2Image, plumCheckScreenshot3Image],
+      images: [
+        plumCheckScreenshot1Image,
+        plumCheckScreenshot2Image,
+        plumCheckScreenshot3Image,
+        plumCheckScreenshot4Image,
+      ],
     },
     links: ['plumcheck.io'],
     name: 'PlumCheck',
